examples/type_system/failing/52_strict_public_missing_return_annotation.flx
public fn add(x: Int, y: Int) {
    x + y
}

fn main() -> Unit {
}
